Update README.md
previous patch notes